fix(image-placeholder): dark mode color

--- a/src/less/image-placeholder/image-placeholder.less
+++ b/src/less/image-placeholder/image-placeholder.less
@@ -1,5 +1,5 @@
 svg.image-placeholder {
-    color: var(--color-foreground-primary);
+    fill: var(--color-foreground-primary);
     height: inherit;
     width: inherit;
 }
